--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,8 +21,8 @@ html(lang="en")
         ul.uk-navbar-nav
           li.uk-active
             a(href='/') Home
-          li.uk-active
-            a(href='/home') Auctions
+          //- li.uk-active
+          //-   a(href='/home') Auctions
           
       .uk-navbar-right
         ul.uk-navbar-nav
@@ -47,5 +47,6 @@ html(lang="en")
     <!-- UIkit JS -->
     script(src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js")
-    script(src="/javascripts/socket.io.js")
+    //- script(src="/javascripts/socket.io.js")
     script(src="/javascripts/script.js")
+    //- script(src="/javascripts/validations.js")
