--- a/views/mixins/_authform.pug
+++ b/views/mixins/_authform.pug
@@ -19,7 +19,7 @@ mixin authform(register, error)
         input.uk-input(type='password' name='password' id='password')
     if register
       .uk-margin
-        label(class="uk-form-label" for="confirm-pass") Confirm password
+        label(class="uk-form-label" for="confirm-pass") Confirm passwordtsss
         .uk-inline
           span.uk-form-icon(uk-icon='icon: lock')
           //- input.uk-input(type='password' name='confirm-pass' id='confirm-pass' title='Please enter the same Password as above.' required pattern='(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}')
