--- a/views/mixins/_authform.pug
+++ b/views/mixins/_authform.pug
@@ -18,7 +18,7 @@ mixin authform(register, error)
         input.uk-input(type='password' name='confirm-pass')
     if register
       .uk-margin
-        label(class="uk-form-label" for="username") Confirm password
+        label(class="uk-form-label" for="username") Confirm 
         .uk-inline
           span.uk-form-icon(uk-icon='icon: lock')
           input.uk-input(type='password' name='confirm-pass')
