--- a/views/mixins/_authform.pug
+++ b/views/mixins/_authform.pug
@@ -12,7 +12,7 @@ mixin authform(register, error)
         span.uk-form-icon(uk-icon='icon: mail')
         input.uk-input(type='email' name='email' id='email')
     .uk-margin
-      label(class='uk-form-label' for='password') Password
+      label(class='uk-form-label' for='password') Password de pruebas
       .uk-inline
         span.uk-form-icon(uk-icon='icon: lock')
         //- input.uk-input(type='password' name='password' id='password' title='Password must contain at least 6 characters, including UPPER/lowercase and numbers.' required pattern='(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}')
