--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ html(lang="en")
       .uk-navbar-left
         ul.uk-navbar-nav
           li.uk-active
-            a(href='/') Home
+            a(href='/home') Home
           //- li.uk-active
           //-   a(href='/home') Auctions
           
