:checkered_flag: Daily menus on process...

--- a/views/days.pug
+++ b/views/days.pug
@@ -9,7 +9,8 @@ block content
         canvas(width='600', height='400')
       div
         .uk-card-body
-          h3.uk-card-title LUNES
+          h3.uk-card-title 
+            a(href=`/menu_day/lunes`) LUNESssss
           p
             | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
     .uk-card.uk-card-default.uk-grid-collapse.uk-margin(class='uk-child-width-1-2@s', uk-grid='')
