--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,9 @@ html(lang="en")
     <!-- UIkit CSS -->
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/css/uikit.min.css")
     link(rel="stylesheet" href="/stylesheets/style.css")
+    <!-- Datatables CSS -->
+    link(rel='stylesheet', type='text/css', href='https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css')
+
   body
 
     nav.uk-navbar-container(uk-navbar='')
@@ -21,8 +24,10 @@ html(lang="en")
         ul.uk-navbar-nav
           li.uk-active
             a(href='/home') Home
-          //- li.uk-active
-          //-   a(href='/home') Auctions
+          li.uk-active
+            a(href='/menus') Menus
+          li.uk-active
+            a(href='/foods') Foods
           
       .uk-navbar-right
         ul.uk-navbar-nav
@@ -47,6 +52,9 @@ html(lang="en")
     <!-- UIkit JS -->
     script(src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js")
+    <!-- Datatables JS -->
+    script(src='https://code.jquery.com/jquery-3.4.1.min.js', integrity='sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=', crossorigin='anonymous')
+    script(src='//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js')
     //- script(src="/javascripts/socket.io.js")
     script(src="/javascripts/script.js")
     //- script(src="/javascripts/validations.js")
