views for menus

--- a/views/menus.pug
+++ b/views/menus.pug
@@ -19,6 +19,5 @@ block content
           td=menu.ranking
           td
             a(href="/foods/form") Create Food
-            a(href="/") Read
             a(href="/") Edit
-            a(href="/") Delete
+            a(href="/menus/#{menu._id}") Delete
