--- a/views/objectives.pug
+++ b/views/objectives.pug
@@ -9,32 +9,42 @@ block content
           .uk-margin
           label(class='uk-form-label' for='gender') Gender
           .uk-inline
-            span.uk-form-icon(uk-icon='icon: users')
-            input.uk-input(type='text' name='gender' id='gender')
+            select(name='gender')
+              option(value='man') Hombre
+              option(value='woman') Mujer
           //- Age
           .uk-margin
-          label(class='uk-form-label' for='age') Age
+          label(class='uk-form-label' for='age') Edad
           .uk-inline
             span.uk-form-icon(uk-icon='icon: clock')
             input.uk-input(type='text' name='age' id='age')
           //- weight
           .uk-margin
-          label(class='uk-form-label' for='weight') Weight
+          label(class='uk-form-label' for='weight') Peso
           .uk-inline
             span.uk-form-icon(uk-icon='icon: shrink')
             input.uk-input(type='text' name='weight' id='weight')
           //- height
           .uk-margin
-          label(class='uk-form-label' for='height') Height
+          label(class='uk-form-label' for='height') Altura
           .uk-inline
             span.uk-form-icon(uk-icon='icon: expand')
             input.uk-input(type='text' name='height' id='height')
           //- exercise
           .uk-margin
-          label(class='uk-form-label' for='exercise') Exercise
+          label(class='uk-form-label' for='exercise') Ejercicio
           .uk-inline
-            span.uk-form-icon(uk-icon='icon: expand')
-            input.uk-input(type='text' name='exercise' id='exercise')
+            select(name='exercise')
+              //- option(value='man') Hombre
+              option(value='Si') Si
+              option(value='No') No
+          //- objectives
+          .uk-margin
+          label(class='uk-form-label' for='objectives') Objetivos
+          .uk-inline
+            select(name='objectives')
+              option(value='muscle') Adelgazar
+              option(value='slim') Ganar Musculatura
           if errorMessage
             .uk-alert-danger.uk-width-1-1(uk-alert)
               p #{errorMessage}
