Login, signup & objectives

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,8 @@ html(lang="en")
       .uk-navbar-left
         ul.uk-navbar-nav
           li.uk-active
-            a(href='/home') Home
+            a(href='/home')
+              img(class="logo" src='/images/alicia_logo.svg', alt='')
           //- li.uk-active
           //-   a(href='/home') Auctions
           
