--- a/views/objectives.pug
+++ b/views/objectives.pug
@@ -2,21 +2,26 @@ extends layout
 
 block content
   section.uk-section
-    .uk-container.uk-flex.uk-flex-center
+    .uk-container.uk-flex.uk-flex-center.logs
       .uk-width-1-2.uk-flex.uk-flex-center
         form(action="/objectives", method="post")
           //- Gender
           .uk-margin
           label(class='uk-form-label' for='gender') Gender
-          .uk-inline
-            span.uk-form-icon(uk-icon='icon: users')
-            input.uk-input(type='text' name='gender' id='gender')
+         
+            .uk-margin.uk-grid-small.uk-child-width-auto.uk-grid
+              label
+                input.uk-ratio(type='radio',name="male", )
+                |  Hombre
+              label
+                input.uk-ratio(type='radio' ,name="female")
+                |  Mujer
           //- Age
           .uk-margin
-          label(class='uk-form-label' for='age') Age
+          label(class='uk-form-label' for='age') Birthday   
           .uk-inline
-            span.uk-form-icon(uk-icon='icon: clock')
-            input.uk-input(type='text' name='age' id='age')
+            span.uk-form-icon(uk-icon='icon: calendar')
+            input.uk-input(type='date' name='age' id='age')
           //- weight
           .uk-margin
           label(class='uk-form-label' for='weight') Weight
@@ -38,5 +43,5 @@ block content
           if errorMessage
             .uk-alert-danger.uk-width-1-1(uk-alert)
               p #{errorMessage}
-          button.uk-button.uk-button-primary Register objectives
+          button.uk-button.uk-button-primary.uk-margin-top Register objectives
           
