--- a/views/register.pug
+++ b/views/register.pug
@@ -4,6 +4,6 @@ include mixins/_authform
 
 block content
   section.uk-section
-    .uk-container.uk-flex.uk-flex-center
+    .uk-container.uk-flex.uk-flex-center.logs.uk-flex-middle
       .uk-width-1-2.uk-flex.uk-flex-center
         +authform(true, errorMessage)
