--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,39 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap");
+* {
+  padding: 0;
+  margin: 0; }
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font-family: "Raleway";
+  background-image: url(/images/back.svg);
+  background-size: 100%;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat; }
 
 a {
-  color: #00B7FF; }
+  color: #000; }
+
+input {
+  border: 1px solid #f2c029; }
+
+.logo {
+  width: 45%; }
+
+.uk-navbar-container:not(.uk-navbar-transparent) {
+  background: #f6f4ea; }
+
+.logs {
+  background-color: rgba(255, 255, 255, 0.858);
+  height: 500px;
+  width: 30%;
+  border-radius: 50px; }
+
+.uk-button-primary {
+  background-color: #f2c029; }
+
+.uk-button-primary:hover {
+  background-color: #f2c029;
+  opacity: 0.8; }
 
 /*# sourceMappingURL=style.css.map */
