--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,50 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap");
+
+$font: "Raleway";
+$normal-font: 400;
+$thin-font: 300;
+$bold-font: 700;
+$base-color: #e6dd33;
+$back-color: #f6f4ea;
+$dark-yellow: #f2c029;
+
+* {
+  padding: 0;
+  margin: 0;
+}
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: $font;
+  background-image: url(/images/back.svg);
+  background-size: 100%;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
 }
 
 a {
-  color: #00B7FF;
+  color: #000;
+}
+input {
+  border: 1px solid $dark-yellow;
+}
+
+.logo {
+  width: 45%;
+}
+
+.uk-navbar-container:not(.uk-navbar-transparent) {
+  background: $back-color;
+}
+.logs {
+  background-color: rgba(255, 255, 255, 0.858);
+  height: 500px;
+  width: 30%;
+  border-radius: 50px;
+}
+.uk-button-primary {
+  background-color: $dark-yellow;
+}
+.uk-button-primary:hover {
+  background-color: $dark-yellow;
+  opacity: 0.8;
 }
