--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,7 +23,7 @@ html(lang="en")
       .uk-navbar-left
         ul.uk-navbar-nav
           li.uk-active
-            a(href='/home') Home
+            a(href='/profile') Profile
               img(class="logo" src='/images/alicia_logo.svg', alt='')
           li.uk-active
             a(href='/menus') Menus
