--- a/views/menus.pug
+++ b/views/menus.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1 Menus
 
-  a(href="/menus/form") Creat Menu
+  a(href="/menus/form") Create Menu
 
   //- table(style='width:100%')
   table#myTable  
