--- a/views/objectives.pug
+++ b/views/objectives.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   section.uk-section
-    .uk-container.uk-flex.uk-flex-center.logs
+    .uk-container.uk-flex.uk-flex-center.logs.main-logs
       .uk-width-1-2.uk-flex.uk-flex-center
         form(action="/objectives", method="post")
           //- Gender
