--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -14,26 +14,32 @@ $dark-yellow: #f2c029;
 }
 body {
   font-family: $font;
-  background-image: url(/images/back.svg);
-  background-size: 100%;
-  height: 100vh;
   width: 100%;
   background-repeat: no-repeat;
 }
 
 a {
-  color: #000;
+  color: white;
 }
 input {
   border: 1px solid $dark-yellow;
 }
-
+h1 {
+  font-size: 30px;
+}
 .logo {
   width: 45%;
 }
 
 .uk-navbar-container:not(.uk-navbar-transparent) {
-  background: $back-color;
+  background: $dark-yellow;
+  color: white;
+}
+.main-logs {
+  background-image: url(/images/back.svg);
+  background-size: 100%;
+  height: 100vh;
+  width: 100%;
 }
 .logs {
   background-color: rgba(255, 255, 255, 0.858);
@@ -47,4 +53,24 @@ input {
 .uk-button-primary:hover {
   background-color: $dark-yellow;
   opacity: 0.8;
+}
+.super-container {
+  margin: 30px;
+}
+.uk-container .subtitle {
+  text-transform: capitalize;
+  text-decoration: underline;
+  color: $dark-yellow;
+}
+.card-style {
+  width: 500px;
+  border-radius: 20px;
+  border: 6px solid $dark-yellow;
+}
+
+.card-style h3 {
+  text-transform: capitalize;
+}
+
+.table {
 }
