--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,12 +23,12 @@ html(lang="en")
       .uk-navbar-left
         ul.uk-navbar-nav
           li.uk-active
-            a(href='/home') Home
+            a(href='/profile') 
               img(class="logo" src='/images/alicia_logo.svg', alt='')
           li.uk-active
             a(href='/menus') Menus
           li.uk-active
-            a(href='/foods') Foods
+            a(href='/foods') Comidas
           
       .uk-navbar-right
         ul.uk-navbar-nav
@@ -38,14 +38,14 @@ html(lang="en")
               .uk-navbar-dropdown
                 ul.uk-nav.uk-navbar-dropdown-nav
                   li.uk-active
-                    a(href='/profile') profile
+                    a(href='/profile') Perfil
                   li
-                    a(href='/logout') logout
+                    a(href='/logout') Salir
           else
             li.uk-active
-              a(href='/login') Login
+              a(href='/login') Entrar
             li
-              a(href='/signup') Signup
+              a(href='/signup') Registro
   
 
     block content
