--- a/views/register.pug
+++ b/views/register.pug
@@ -3,7 +3,7 @@ extends layout
 include mixins/_authform
 
 block content
-  section.uk-section
+  section.uk-section.main-logs
     .uk-container.uk-flex.uk-flex-center.logs.uk-flex-middle
       .uk-width-1-2.uk-flex.uk-flex-center
         +authform(true, errorMessage)
