--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -72,5 +72,12 @@ h1 {
   text-transform: capitalize;
 }
 
-.table {
+.icon {
+  height: 50px;
+  width: 50px;
+  margin: auto;
+}
+.icon img {
+  height: 100%;
+  width: 100%;
 }
