--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,42 @@
 extends layout
 
 block content
-  h1 estas en el home, haz una landing page aqui Pat please
+    main
+    .uk-position-relative.uk-visible-toggle.uk-light(tabindex='-1', uk-slideshow='autoplay:true;ratio: false;animation: fade')
+      ul.uk-slideshow-items(uk-height-viewport="offset-top: true; offset-bottom: 0")
+        li
+          img(src='/images/food1.jpg', alt='', uk-cover)
+        li
+          img(src='/images/food2.jpg', alt='', uk-cover)
+        li
+          img(src='/images/food3.jpg', alt='', uk-cover)
+    
+      a.uk-position-center-left.uk-position-small.uk-hidden-hover(href='#', uk-slidenav-previous='', uk-slideshow-item='previous')
+      a.uk-position-center-right.uk-position-small.uk-hidden-hover(href='#', uk-slidenav-next='', uk-slideshow-item='next')
+
+      section.uk-section
+    .uk-container
+      article.uk-article.uk-margin-medium-bottom.uk-text-center
+        h1.uk-article-title
+          a.uk-link-reset(href='') Alicia
+        p.uk-text-lead.uk-text-center
+          | Alicia es tu aliado para lograr tus objetivos, dependiendo de tu       estilo de vida, tus horarios y tus gustos.
+      .uk-grid.uk-grid.uk-child-width-1-3.uk-margin-large-bottom
+        div.uk-card.uk-card-default.uk-card-body.uk-text-center
+          .icon
+            img.icon(src="/images/muscle-icon-png-24.jpg", alt="")
+          h3 Ganar masa muscular
+          p
+            | Si lo tuyo es el bulking, será necesario tener una rutina de ejercicio dedicada pero ALICIA te ayudará a crecer, crecer, crecer.
+        div.uk-card.uk-card-default.uk-card-body.uk-text-center
+          .icon
+            img.icon(src="/images/slim.png", alt="")
+          h3 Bajar grasa
+          p
+            | La pancita suele enamorar pero si no buscar amor verdadero, ALICIA   te ayudará a reducir la grasa de tu cuerpo sin perder agua y sin     tener que matarte haciendo cardio.
+        div.uk-card.uk-card-default.uk-card-body.uk-text-center
+          .icon
+            img(src="/images/weighing_scale_407399.png", alt="")
+          h3 Mantente asi
+          p
+            | Si tienes un estilo de vida tan complejo que ya no se te            ocurre que comer, ALICIA será quien se preocupe por darte las        mejores opciones que te mantendran en tu peso sin perder la línea    que tu mismo marques. 
