--- a/views/foods.pug
+++ b/views/foods.pug
@@ -10,7 +10,7 @@ block content
         tr
           th Nombre
           th Dia
-          th Ingredientes
+          th Ingredientess
           th Horario
           th Dieta
           th
