--- a/views/mixins/_menu.pug
+++ b/views/mixins/_menu.pug
@@ -5,7 +5,7 @@ mixin menu(foods)
             h1.subtitle=food.day
             .uk-card.uk-card-hover.uk-card-body.card-style
               h3.uk-card-title=food.name
-              p=food.diet
+              p=food.diet.name
               p=food.schedule
               //- ul
               //-   each ingrediente in food.ingredientes
